src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: 'Inter', 'IBM Plex Sans', 'Arial', sans-serif;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.scrollbar-hide {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
} 

